<resources>
    <string name="app_name">weather</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hint_location_name">Location name</string>
    <string name="ok">Ok,bro</string>
    <string name="morning">morning</string>
    <string name="day">day</string>
    <string name="evening">evening</string>
    <string name="night">night</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="hint_index">index</string>
    <string name="hint_city">City</string>
    <string name="hint_current_temp">Current(℃)</string>
    <string name="delete">Delete</string>
    <string name="all">All</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="hint_is_favorite">Liked </string>
    <string name="second_day_forecast">Second day forecast</string>
    <string name="today_daily_temp">Today temp</string>
    <string name="tomorrow_daily_temp">Tomorrow temp</string>
    <string name="alert_dialog_title">Warning</string>
    <string name="alert_dialog_message">Connect to the internet for up-to-date information</string>
    <string name="ok_btn">ok</string>
    <string name="miss">miss</string>
</resources>